Added Colonne, Comatrice and Line command

--- a/src/skeleton.tex
+++ b/src/skeleton.tex
@@ -26,6 +26,7 @@
 \newcommand{\K}{\mathbb{K}}
 \newcommand{\co}[1]{\mathrm{C^{#1}}}
 \newcommand{\sym}{\mathcal{S}}
+\newcommand{\groupeLineaire}{\mathcal{GL}}
 
 % Abreviation de declaration
 \newcommand{\resu}{(u_n)_{n \in \N} \in \R^\N}
@@ -77,6 +78,9 @@
 \newcommand{\lib}{\llbracket}
 \newcommand{\rib}{\rrbracket}
 
+\newcommand{\colonne}{\mathrm{C}}
+\newcommand{\ligne}{\mathrm{L}}
+
 \newcommand{\voc}[1]{\textit{#1}}
 \newcommand{\hyp}[1]{\textbf{#1}}
 
@@ -106,6 +110,7 @@
 \DeclareMathOperator{\Dia}{\mathcal{D}}
 \DeclareMathOperator{\Card}{\mathrm{Card}}
 \DeclareMathOperator{\M}{\mathcal{M}}
+\DeclareMathOperator{\com}{\mathrm{com}}
 
 \DeclarePairedDelimiter\abs{\lvert}{\rvert}
 
